@@ -641,12 +641,17 @@ input:focus, textarea:focus, select:focus {
     border-left: 1px solid #C4C4B8;
     border-top: 1px solid #C4C4B8;
     -moz-border-radius: 5px;
+    padding-top: 0; padding-bottom: 0;
+    padding-left: 2px; padding-right: 2px;
 }
 
 .g-buttonDisable, input:focus.g-buttonDisable {
     color: #000;
     background: grey;
+    border: 1px solid #efefff;
     -moz-border-radius: 5px;
+    padding-top: 0; padding-bottom: 0;
+    padding-left: 2px; padding-right: 2px;
 }
 
 .g-selected {
